2004-03-02  Elliott Hughes  <enh@acm.org>

	* src/option.cpp: Implement -Werror as a javac-compatible synonym
	for +Z2.
	* src/jikes.cpp, doc/jikes.1: Document new -Werror option.

2004-03-01  Eric Blake  <ebb9@byu.net>

	* src/ast.h (Ast, StoragePool): Backport improved type-safety,
	reduced object size, and placement operator new from
	generics-branch.  Affects all Ast classes.
	* src/ast.cpp: Ditto.
	* src/body.cpp: Ditto.
	* src/bytecode.cpp: Ditto.
	* src/control.cpp: Ditto.
	* src/definite.cpp: Ditto.
	* src/expr.cpp: Ditto.
	* src/java.g: Ditto.
	* src/parser.cpp: Ditto.
	* src/javaact.cpp: Regenerate.

2004-02-29  Elliott Hughes  <enh@acm.org>

	* src/error.cpp: Also allow +Pno-all to turn off all named groups. This
	is useful to turn off any named groups enabled by default, without
	having to know what they are or explicitly list them.
	* doc/jikes.1: Better document new +Pno-all option.

2004-02-29  Elliott Hughes  <enh@acm.org>

	* src/error.cpp: Fix "jikes --help" to show which +P groups are enabled
	by default, rather than misleadingly trying (and failing) to show what
	bare +P does. This whole area is something of a mess, so I expect to
	be back soon.
	Also add a new +Pall option to allow command-lines of the form "jikes
	+Pall +Pno-redundant-modifier +Pno-modifier-order +Pno-serial", for
	people who'd rather enable everything and explicitly disable what they
	don't like than explicitly enable everything they want.
	* doc/jikes.1: Document new +Pall option. The whole +P section was
	rather misleading and inaccurate, so I've rewritten it to correspond
	jikes' current behavior.

2004-02-28  Elliott Hughes  <enh@acm.org>

	* NEWS: Try to keep track of what I've done, so I don't have to
	read through the ChangeLog when we're getting ready to release 1.20.

2004-02-28  Elliott Hughes  <enh@acm.org>

	* src/error.cpp: Implement upgrading of warnings to errors, as well
	as the old optional upgrading of cautions. Fixes bug 665.